--- a/src/public/css/user/userHome.css
+++ b/src/public/css/user/userHome.css
@@ -164,14 +164,44 @@
     pointer-events: none;
   }
 }
+.preloader {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: #FFDFDF;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  z-index: 5;
+  transition: 0.5s;
+}
+/* .preloader.unactive {
+  opacity: 0;
+  pointer-events: none;
+} */
+.loading {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #D1A6A6;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  animation: 1s reloader infinite linear;
+}
+
 @keyframes bling {
   0% {color: white;}
   50% {color: yellow;}
   100% {color: white;}
 }
+@keyframes reloader {
+  to { transform: rotate(360deg); }
+}
 @keyframes loop {
   0% { transform: translateX(0) }
-
   100% { transform: translateX(-50%) }
 }
 @media screen and (max-width: 700px) {
