--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -26,6 +26,11 @@
   <title>{{title}}</title>
 </head>
 <body>
+  <div class="preloader">
+    <div class="loading"></div>
+    <h3 style="color: #D1A6A6;">Bạn đợi 1 xí nha ><</h3>
+  </div>
+
   <header>
     {{> userHeader}}
   </header>
@@ -43,3 +48,10 @@
   </footer>
 </body>
 </html>
+
+<script>
+  window.addEventListener('load', () => {
+    const preloader = document.querySelector('div.preloader')
+    preloader.classList.add('unactive')
+  })
+</script>
