--- a/src/public/css/user/userHome.css
+++ b/src/public/css/user/userHome.css
@@ -165,7 +165,7 @@
   }
 }
 .preloader {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   background-color: #FFDFDF;
@@ -175,13 +175,13 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-  z-index: 5;
+  z-index: 5000;
   transition: 0.5s;
 }
-/* .preloader.unactive {
+.preloader.unactive {
   opacity: 0;
   pointer-events: none;
-} */
+}
 .loading {
   width: 50px;
   height: 50px;
