--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -28,7 +28,7 @@
 <body>
   <div class="preloader">
     <div class="loading"></div>
-    <h3 style="color: #D1A6A6;">Bạn đợi 1 xí nha ><</h3>
+    <h3 style="color: #D1A6A6;"></h3>
   </div>
 
   <header>
