--- a/src/public/css/user/userBody.css
+++ b/src/public/css/user/userBody.css
@@ -1,6 +1,8 @@
 @import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-straight/css/uicons-regular-straight.css');
 @import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-rounded/css/uicons-thin-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css');
 
 body {
   background-color: #FFDFDF;
@@ -51,5 +53,32 @@ body {
 .dropup:hover .dropup-content {
   display: block;
 }
-
-
+.preloader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: #FFDFDF;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 5000;
+  transition: 0.5s;
+}
+.preloader.inactive {
+  opacity: 0;
+  pointer-events: none;
+}
+.loading {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #D1A6A6;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  animation: 1s reloader infinite linear;
+}
+@keyframes reloader {
+  to { transform: rotate(360deg); }
+}
