--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -36,6 +36,11 @@
 </style>
 
 <body>
+  <div class="preloader">
+    <div class="loading"></div>
+    <h3 style="color: #D1A6A6;"></h3>
+  </div>
+
   <header>
     {{> adminSidebar}}
   </header>
@@ -45,3 +50,10 @@
   </main>
 </body>
 </html>
+
+<script>
+  window.addEventListener('load', () => {
+    const preloader = document.querySelector('div.preloader')
+    preloader.classList.add('inactive')
+  })
+</script>
